# wiz

./: Cargo.toml  README.md
.github/workflows/: build_and_release.yaml
src/: main.rs
